Fri Oct 29 03:40:31 2010                        Michael Jennings (mej)

Update provision code after Logger refactoring.
----------------------------------------------------------------------
Sat Oct 30 01:31:24 2010                        Michael Jennings (mej)

Add copyrights to perl scripts.
----------------------------------------------------------------------